--- a/apps/http-server/package.json
+++ b/apps/http-server/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsc -b && node dist/index.js --port 3000",
     "build": "tsc -b",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js --port 3000"
   },
   "dependencies": {
     "@repo/typescript-config": "workspace:*",
