--- a/apps/react-app/package.json
+++ b/apps/react-app/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --port 3001",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start":"vite preview --port 3001"
   },
   "dependencies": {
     "react": "^19.0.0",
